Fix time text overflow

--- a/client/src/pages/EventsPage/styles/EventListItems.module.sass
+++ b/client/src/pages/EventsPage/styles/EventListItems.module.sass
@@ -34,6 +34,7 @@ $colorDarkGray: #555
   position: relative
   width: calc(100% - $padding * 2)
   padding: $padding
+  gap: $gap
 
 .progress
   appearance: none
@@ -58,3 +59,5 @@ $colorDarkGray: #555
 
 .time
   color: $colorGray
+  flex-shrink: 0
+  text-align: right
